# ARO

./: README.md
src/aro_slam/launch/: icp_slam_2d.launch  live.launch  turtle.rviz
src/aro_slam/scripts/: icp_slam_2d
src/aro_slam/src/aro_slam/: icp.py
src/barbie_detection/scripts/: detector.py
src/dummy_grid/config/: grid.rviz
src/dummy_grid/launch/: Untitled Document  dummy_grid_.launch  turtle.rviz
src/dummy_grid/scripts/: compute_front.py  test_planning.py
src/exploration/launch/: exp.launch
src/exploration/scripts/: frontier.py  planner.py  routine.py
src/exploration/src/exploration/: utils.py
src/follow/: CMakeLists.txt  package.xml
src/follow/src/: follow.cpp
src/robot_coordination/launch/: rc.launch
src/robot_coordination/scripts/: path_following_simple.py
src/robot_coordination/src/: robot.cpp
src/turtlebot/: README.md
src/turtlebot/launch/: bringup.launch  camera.launch  camera.launch.save
src/turtlebot/salt/: Saltfile
src/turtlebot/salt/salt_config/: minion
src/turtlebot/scripts/: .record_data.py.swp  epickyKodik.py  get_battery_charge.sh  get_battery_voltage.sh  imsave.py  project.py  sensors_test.py
